Margins, Paddings and scroll bars hidden

--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
 <meta charset="utf-8" />
 <title>JOOOSIII!</title>
 <style>
+  body {
+    margin: 0px;
+    padding: 0px;
+    overfliw: hidden;
+  }
   #jositimer {
     display: block;
     font-size: 400%;
     font-family: monospace;
     text-align: center;
+    margin: 0px;
+    padding: 0px;
   }
 </style>
 </head>
